# git-plumber

./: .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  flake.nix  git-plumber.cast  git-plumber.demo  justfile
.github/docker/: Dockerfile
.github/workflows/: ci.yml  release.yml
.gitlab/: maintenance-ci.yml  nix-image-update.rs  release-notes.md
src/: config.rs  educational_content.rs  lib.rs  main.rs  version.rs
src/cli/: formatters.rs  mod.rs
src/core/: mod.rs
src/git/: loose_object.rs  mod.rs  repository.rs
src/git/pack/: bitmap.rs  delta.rs  index.rs  mod.rs  mtimes.rs  multi_pack_index.rs  object.rs  resolver.rs  reverse_index.rs
src/tui/: enhanced_watcher.rs  git_tree.rs  helpers.rs  loaders.rs  logger.rs  message.rs  mod.rs  model.rs  navigation.rs  pure_loaders.rs  scrolling.rs  update.rs  view.rs  watcher.rs
src/tui/loose_details/: key_bindings.rs  model.rs  update.rs  view.rs
src/tui/main_view/: key_bindings.rs  mod.rs  model.rs  state_components.rs  update.rs  view.rs
src/tui/main_view/animations/: mod.rs
src/tui/main_view/change_detection/: mod.rs
src/tui/main_view/services/: direct_highlight_service.rs  dynamic_folder_service.rs  git_service.rs  mod.rs  precomputed_highlight_service.rs  service_container.rs  state_service.rs  tree_service.rs  ui_service.rs
src/tui/main_view/tree_ops/: flattening.rs  mod.rs  natural_sort.rs
src/tui/pack_details/: key_bindings.rs  mod.rs  model.rs  update.rs  view.rs
src/tui/widget/: formatters_utils.rs  mod.rs  pack_obj_details.rs  scrollable_text.rs
(+38 files in other folders)
